--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular2-webpack-minimal-boilerplate",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "angular2 webpack typescript minimal boilerplate",
   "scripts": {
     "dev": "webpack && webpack-dev-server --config webpack.config.js",
@@ -21,30 +21,30 @@
   "author": "Isman Usoh<isman.usoh@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "angular2-template-loader": "^0.4.0",
-    "css-loader": "^0.23.1",
+    "angular2-template-loader": "^0.5.0",
+    "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "html-loader": "^0.4.3",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.22.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
-    "tslint": "^3.13.0",
+    "tslint": "^3.15.1",
     "tslint-loader": "^2.1.5",
     "typescript": "^1.8.10",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.0"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.4",
-    "@angular/compiler": "^2.0.0-rc.4",
-    "@angular/core": "^2.0.0-rc.4",
-    "@angular/platform-browser": "^2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
+    "@angular/core": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0",
+    "@angular/platform-browser-dynamic": "^2.0.0",
     "core-js": "^2.4.1",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.0-beta.6",
-    "zone.js": "^0.6.12"
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "^5.0.0-beta.12",
+    "zone.js": "^0.6.23"
   }
 }
